refactor(core): overhaul security architecture and enforce hexagonal patterns
- Decouple JWT assertion logic from HTTP infrastructure:
  - Extract `JwtAssertionService` (Application Service) using Nimbus JOSE.
  - Introduce `TokenExchangePort` and `ReactiveTokenExchangePort`.
- Implement infrastructure adapters:
  - `ServletTokenExchangeAdapter` using `ServletTechnicalRestClient`.
  - `ReactiveTokenExchangeAdapter` using `ReactiveTechnicalRestClient`.
- Refactor `UserMapper` and REST clients:
  - Replace deprecated annotations with `Objects.requireNonNull`.
  - Add robust null checking and safer type casting.
- Clean up `application-core`:
  - Remove obsolete `auth` and `config` packages.
  - Move `AuthenticatedUser` to `security` package.
  - Rename `PaginationUtils` to `PaginationFactory` and move to `pagination` package.
- Add unit tests for `JwtAssertionService` and Technical REST Clients.